// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-tabs> Component basic usage 1`] = `
<bolt-tabs>
  <replace-with-grandchildren class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--spacing-medium">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 1
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 1
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-medium">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 2
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 2
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-medium">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 3
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 3
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-medium">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
  </replace-with-grandchildren>
</bolt-tabs>
`;

exports[`<bolt-tabs> Component spacing: large 1`] = `
<bolt-tabs spacing="large">
  <replace-with-grandchildren class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--spacing-large">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 1
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 1
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-large">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 2
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 2
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-large">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 3
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 3
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-large">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
  </replace-with-grandchildren>
</bolt-tabs>
`;

exports[`<bolt-tabs> Component spacing: medium 1`] = `
<bolt-tabs spacing="medium">
  <replace-with-grandchildren class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--spacing-medium">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 1
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 1
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-medium">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 2
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 2
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-medium">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 3
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 3
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-medium">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
  </replace-with-grandchildren>
</bolt-tabs>
`;

exports[`<bolt-tabs> Component spacing: none 1`] = `
<bolt-tabs spacing="none">
  <replace-with-grandchildren class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--spacing-none">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 1
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 1
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-none">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 2
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 2
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-none">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 3
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 3
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-none">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
  </replace-with-grandchildren>
</bolt-tabs>
`;

exports[`<bolt-tabs> Component spacing: small 1`] = `
<bolt-tabs spacing="small">
  <replace-with-grandchildren class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--spacing-small">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 1
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 1
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 2
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 2
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 3
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 3
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
  </replace-with-grandchildren>
</bolt-tabs>
`;

exports[`<bolt-tabs> Component spacing: xsmall 1`] = `
<bolt-tabs spacing="xsmall">
  <replace-with-grandchildren class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--spacing-xsmall">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 1
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 1
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-xsmall">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 2
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 2
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-xsmall">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label"
    >
      <span class="c-bolt-tabs__label-inner">
        Tab label 3
      </span>
    </label>
    <replace-with-children class="c-bolt-tab-panel__outer">
      <bolt-tab-panel ssr-hydrate="keep">
        <div slot="label">
          Tab label 3
        </div>
        <replace-with-grandchildren class="c-bolt-tab-panel c-bolt-tab-panel--spacing-xsmall">
          <div role="tabpanel"
               class="c-bolt-tab-panel__content"
          >
            This is the tab content.
          </div>
        </replace-with-grandchildren>
      </bolt-tab-panel>
    </replace-with-children>
  </replace-with-grandchildren>
</bolt-tabs>
`;
